--- a/app/src/main/res/layout/activity_program_browser.xml
+++ b/app/src/main/res/layout/activity_program_browser.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="pl.edu.agh.pockettrainer.ProgramBrowserActivity">
+    tools:context="pl.edu.agh.pockettrainer.ui.ProgramBrowserActivity">
 
 </android.support.constraint.ConstraintLayout>
