--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:appConfig="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,8 +12,8 @@
         android:layout_height="wrap_content"
         android:text="@string/no_active_programs"
         android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        appConfig:layout_constraintBottom_toBottomOf="parent"
+        appConfig:layout_constraintLeft_toLeftOf="parent"
+        appConfig:layout_constraintRight_toRightOf="parent"
+        appConfig:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
