--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:appConfig="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -16,11 +16,11 @@
         android:textColor="#fff"
         android:textSize="30sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.411" />
+        appConfig:layout_constraintBottom_toBottomOf="parent"
+        appConfig:layout_constraintLeft_toLeftOf="parent"
+        appConfig:layout_constraintRight_toRightOf="parent"
+        appConfig:layout_constraintTop_toTopOf="parent"
+        appConfig:layout_constraintVertical_bias="0.411" />
 
     <ProgressBar
         android:id="@+id/progressBar"
@@ -30,10 +30,10 @@
         android:layout_marginTop="8dp"
         android:indeterminate="true"
         android:indeterminateTint="#fff"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintVertical_bias="0.018" />
+        appConfig:layout_constraintBottom_toBottomOf="parent"
+        appConfig:layout_constraintLeft_toLeftOf="parent"
+        appConfig:layout_constraintRight_toRightOf="parent"
+        appConfig:layout_constraintTop_toBottomOf="@+id/textView"
+        appConfig:layout_constraintVertical_bias="0.018" />
 
 </android.support.constraint.ConstraintLayout>
