--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="pl.edu.agh.pockettrainer.ui.HomeActivity">
+    tools:context="pl.edu.agh.pockettrainer.ui.activities.HomeActivity">
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/no_active_programs"
