--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -5,16 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#00A6FF"
-    tools:context="pl.edu.agh.pockettrainer.ui.SplashScreenActivity">
+    tools:context="pl.edu.agh.pockettrainer.ui.activities.SplashScreenActivity">
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/cambo"
+        android:fontFamily="@font/roboto_slab"
         android:text="@string/app_name"
         android:textColor="#fff"
-        android:textSize="30sp"
+        android:textSize="24sp"
         android:textStyle="bold"
         appConfig:layout_constraintBottom_toBottomOf="parent"
         appConfig:layout_constraintLeft_toLeftOf="parent"
@@ -24,8 +24,8 @@
 
     <ProgressBar
         android:id="@+id/progressBar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="31dp"
+        android:layout_height="30dp"
         android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
         android:indeterminate="true"
