--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <array name="preloaded_fonts" translatable="false">
+        <item>@font/</item>
         <item>@font/arbutus_slab</item>
         <item>@font/cambo</item>
+        <item>@font/roboto</item>
+        <item>@font/roboto_slab</item>
     </array>
 </resources>
