--- a/app/src/main/res/layout/activity_program_browser.xml
+++ b/app/src/main/res/layout/activity_program_browser.xml
@@ -15,6 +15,8 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:dividerHeight="16sp"
+        android:divider="#ccc"
         appConfig:layout_constraintBottom_toBottomOf="parent"
         appConfig:layout_constraintEnd_toEndOf="parent"
         appConfig:layout_constraintStart_toStartOf="parent"
