--- a/app/src/main/res/layout/program_item.xml
+++ b/app/src/main/res/layout/program_item.xml
@@ -46,24 +46,28 @@
     <Button
         android:id="@+id/btnShow"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="30sp"
         android:layout_marginBottom="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
+        android:background="@android:drawable/screen_background_light_transparent"
         android:text="show"
+        android:textColor="#00A6FF"
         appConfig:layout_constraintBottom_toBottomOf="parent"
         appConfig:layout_constraintStart_toStartOf="parent"
         appConfig:layout_constraintTop_toBottomOf="@+id/label_goals"
         appConfig:layout_constraintVertical_bias="0.0" />
 
     <Button
-        android:id="@+id/btnEnroll"
+        android:id="@+id/btnToggleEnroll"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="30sp"
         android:layout_marginBottom="16dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
+        android:background="@android:drawable/screen_background_light_transparent"
         android:text="Enroll"
+        android:textColor="#00A6FF"
         appConfig:layout_constraintBottom_toBottomOf="parent"
         appConfig:layout_constraintStart_toEndOf="@+id/btnShow"
         appConfig:layout_constraintTop_toBottomOf="@+id/label_goals"
