--- a/app/src/main/res/layout/program_item.xml
+++ b/app/src/main/res/layout/program_item.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:appConfig="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#fff">
+    android:background="@android:drawable/dialog_holo_light_frame">
 
     <ImageView
         android:id="@+id/program_image"
@@ -52,7 +51,7 @@
         android:layout_marginTop="16dp"
         android:background="@android:drawable/screen_background_light_transparent"
         android:text="show"
-        android:textColor="#00A6FF"
+        android:textColor="@android:color/darker_gray"
         appConfig:layout_constraintBottom_toBottomOf="parent"
         appConfig:layout_constraintStart_toStartOf="parent"
         appConfig:layout_constraintTop_toBottomOf="@+id/label_goals"
@@ -67,7 +66,7 @@
         android:layout_marginTop="16dp"
         android:background="@android:drawable/screen_background_light_transparent"
         android:text="Enroll"
-        android:textColor="#00A6FF"
+        android:textColor="@android:color/darker_gray"
         appConfig:layout_constraintBottom_toBottomOf="parent"
         appConfig:layout_constraintStart_toEndOf="@+id/btnShow"
         appConfig:layout_constraintTop_toBottomOf="@+id/label_goals"
