Improve splash screen

--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -29,7 +29,8 @@
         android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
         android:indeterminate="true"
-        android:indeterminateTint="#fff"
+        android:indeterminateTint="@android:color/white"
+        android:indeterminateTintMode="src_in"
         appConfig:layout_constraintBottom_toBottomOf="parent"
         appConfig:layout_constraintLeft_toLeftOf="parent"
         appConfig:layout_constraintRight_toRightOf="parent"
