--- a/app/src/main/res/drawable/launch_screen.xml
+++ b/app/src/main/res/drawable/launch_screen.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:drawable="@color/launcher_color"/>
 
-</selector>
+    <item>
+        <bitmap android:src="@drawable/logo" android:gravity="center"/>
+    </item>
+
+</layer-list>
