--- a/app/src/main/res/layout/program_item.xml
+++ b/app/src/main/res/layout/program_item.xml
@@ -32,12 +32,16 @@
 
     <TextView
         android:id="@+id/label_goals"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
         android:fontFamily="@font/roboto"
         android:text="fitness, health, fat loss"
+        appConfig:layout_constraintEnd_toEndOf="parent"
+        appConfig:layout_constraintHorizontal_bias="0.0"
         appConfig:layout_constraintLeft_toLeftOf="parent"
         appConfig:layout_constraintStart_toStartOf="parent"
         appConfig:layout_constraintTop_toBottomOf="@+id/label_title" />
