--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -5,6 +5,7 @@
         <item>@font/arbutus_slab</item>
         <item>@font/cambo</item>
         <item>@font/roboto</item>
+        <item>@font/roboto_bold</item>
         <item>@font/roboto_slab</item>
     </array>
 </resources>
