--- a/app/src/main/res/layout/activity_program_details.xml
+++ b/app/src/main/res/layout/activity_program_details.xml
@@ -5,5 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="pl.edu.agh.pockettrainer.ui.activities.ProgramDetailsActivity">
-
+    <android.support.v4.view.ViewPager
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/view_pager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </android.support.constraint.ConstraintLayout>
