--- a/app/src/main/res/layout/content_today_finished.xml
+++ b/app/src/main/res/layout/content_today_finished.xml
@@ -4,13 +4,50 @@
     android:layout_height="match_parent">
 
     <TextView
+        android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="FINISHED !!!!"
+        android:layout_marginBottom="80dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:text="100% Complete"
         android:textSize="16sp"
+        appConfig:layout_constraintBottom_toBottomOf="@+id/progressBar2"
+        appConfig:layout_constraintEnd_toEndOf="parent"
+        appConfig:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="Start Over"
+        appConfig:layout_constraintBottom_toTopOf="@+id/textView3"
+        appConfig:layout_constraintEnd_toEndOf="@+id/progressBar2"
+        appConfig:layout_constraintHorizontal_bias="0.496"
+        appConfig:layout_constraintStart_toStartOf="@+id/progressBar2"
+        appConfig:layout_constraintTop_toTopOf="@+id/progressBar2"
+        appConfig:layout_constraintVertical_bias="1.0" />
+
+    <ProgressBar
+        android:id="@+id/progressBar2"
+        style="?android:progressBarStyleHorizontal"
+        android:layout_width="279dp"
+        android:layout_height="261dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:indeterminate="false"
+        android:max="100"
+        android:progress="100"
+        android:progressDrawable="@drawable/circle_green"
         appConfig:layout_constraintBottom_toBottomOf="parent"
-        appConfig:layout_constraintLeft_toLeftOf="parent"
-        appConfig:layout_constraintRight_toRightOf="parent"
+        appConfig:layout_constraintEnd_toEndOf="parent"
+        appConfig:layout_constraintStart_toStartOf="parent"
         appConfig:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
