--- a/app/src/main/res/layout/content_today_new.xml
+++ b/app/src/main/res/layout/content_today_new.xml
@@ -3,14 +3,34 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
+    <ProgressBar
+        android:id="@+id/progressBar3"
+        style="?android:progressBarStyleHorizontal"
+        android:layout_width="279dp"
+        android:layout_height="261dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:indeterminate="false"
+        android:max="100"
+        android:progress="100"
+        android:progressDrawable="@drawable/circle_full"
+        appConfig:layout_constraintBottom_toBottomOf="parent"
+        appConfig:layout_constraintEnd_toEndOf="parent"
+        appConfig:layout_constraintStart_toStartOf="parent"
+        appConfig:layout_constraintTop_toTopOf="parent" />
+
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="NEW"
-        android:textSize="16sp"
-        appConfig:layout_constraintBottom_toBottomOf="parent"
-        appConfig:layout_constraintLeft_toLeftOf="parent"
-        appConfig:layout_constraintRight_toRightOf="parent"
-        appConfig:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:text="Start"
+        appConfig:layout_constraintBottom_toBottomOf="@+id/progressBar3"
+        appConfig:layout_constraintEnd_toEndOf="@+id/progressBar3"
+        appConfig:layout_constraintStart_toStartOf="@+id/progressBar3"
+        appConfig:layout_constraintTop_toTopOf="@+id/progressBar3" />
 
 </android.support.constraint.ConstraintLayout>
