--- a/app/src/main/res/layout/content_today_ready.xml
+++ b/app/src/main/res/layout/content_today_ready.xml
@@ -4,13 +4,65 @@
     android:layout_height="match_parent">
 
     <TextView
+        android:id="@+id/textViewReady"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="READY"
+        android:layout_marginBottom="80dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
         android:textSize="16sp"
+        appConfig:layout_constraintBottom_toBottomOf="@+id/progressBarReady"
+        appConfig:layout_constraintEnd_toEndOf="parent"
+        appConfig:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="92dp"
+        android:text="Continue"
+        appConfig:layout_constraintBottom_toTopOf="@+id/textViewReady"
+        appConfig:layout_constraintEnd_toEndOf="@+id/progressBarReady"
+        appConfig:layout_constraintHorizontal_bias="0.497"
+        appConfig:layout_constraintStart_toStartOf="@+id/progressBarReady"
+        appConfig:layout_constraintTop_toTopOf="@+id/progressBarReady"
+        appConfig:layout_constraintVertical_bias="0.2" />
+
+    <ProgressBar
+        style="?android:progressBarStyleHorizontal"
+        android:layout_width="279dp"
+        android:layout_height="261dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:indeterminate="false"
+        android:max="100"
+        android:progress="100"
+        android:progressDrawable="@drawable/circle_full"
         appConfig:layout_constraintBottom_toBottomOf="parent"
-        appConfig:layout_constraintLeft_toLeftOf="parent"
-        appConfig:layout_constraintRight_toRightOf="parent"
+        appConfig:layout_constraintEnd_toEndOf="parent"
+        appConfig:layout_constraintStart_toStartOf="parent"
+        appConfig:layout_constraintTop_toTopOf="parent" />
+
+    <ProgressBar
+        android:id="@+id/progressBarReady"
+        style="?android:progressBarStyleHorizontal"
+        android:layout_width="279dp"
+        android:layout_height="261dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:indeterminate="false"
+        android:max="100"
+        android:progressDrawable="@drawable/circle_blue"
+        appConfig:layout_constraintBottom_toBottomOf="parent"
+        appConfig:layout_constraintEnd_toEndOf="parent"
+        appConfig:layout_constraintStart_toStartOf="parent"
         appConfig:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
