--- a/app/src/main/res/layout/content_today_recovery.xml
+++ b/app/src/main/res/layout/content_today_recovery.xml
@@ -1,5 +1,6 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:appConfig="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -15,17 +16,33 @@
         appConfig:layout_constraintLeft_toLeftOf="parent"
         appConfig:layout_constraintRight_toRightOf="parent"
         appConfig:layout_constraintTop_toTopOf="parent"
-        appConfig:layout_constraintVertical_bias="0.385" />
+        appConfig:layout_constraintVertical_bias="0.311" />
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="210dp"
         android:layout_height="104dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="32dp"
+        android:contentDescription="@string/battery_icon"
         appConfig:layout_constraintLeft_toLeftOf="parent"
         appConfig:layout_constraintRight_toRightOf="parent"
         appConfig:layout_constraintTop_toTopOf="@+id/textView2"
-        appConfig:srcCompat="@drawable/ic_battery"
-        android:contentDescription="@string/battery_icon" />
+        appConfig:srcCompat="@drawable/ic_battery" />
+
+    <TextView
+        android:id="@+id/textViewCounter"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
+        android:fontFamily="@font/roboto"
+        android:text="0d 0h 00m 00s"
+        android:textSize="18sp"
+        appConfig:layout_constraintBottom_toBottomOf="parent"
+        appConfig:layout_constraintHorizontal_bias="0.501"
+        appConfig:layout_constraintLeft_toLeftOf="parent"
+        appConfig:layout_constraintRight_toRightOf="parent"
+        appConfig:layout_constraintTop_toBottomOf="@+id/imageView"
+        appConfig:layout_constraintVertical_bias="0.026" />
 
 </android.support.constraint.ConstraintLayout>
