--- a/app/src/main/res/layout/content_today_ready.xml
+++ b/app/src/main/res/layout/content_today_ready.xml
@@ -4,19 +4,19 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textViewReady"
+        android:id="@+id/today_ready_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="80dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:textSize="16sp"
-        appConfig:layout_constraintBottom_toBottomOf="@+id/progressBarReady"
+        appConfig:layout_constraintBottom_toBottomOf="@+id/today_belated_progressBar"
         appConfig:layout_constraintEnd_toEndOf="parent"
         appConfig:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/today_ready_button"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:layout_marginBottom="8dp"
@@ -24,11 +24,11 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="92dp"
         android:text="Continue"
-        appConfig:layout_constraintBottom_toTopOf="@+id/textViewReady"
-        appConfig:layout_constraintEnd_toEndOf="@+id/progressBarReady"
+        appConfig:layout_constraintBottom_toTopOf="@+id/today_belated_textView"
+        appConfig:layout_constraintEnd_toEndOf="@+id/today_belated_progressBar"
         appConfig:layout_constraintHorizontal_bias="0.497"
-        appConfig:layout_constraintStart_toStartOf="@+id/progressBarReady"
-        appConfig:layout_constraintTop_toTopOf="@+id/progressBarReady"
+        appConfig:layout_constraintStart_toStartOf="@+id/today_belated_progressBar"
+        appConfig:layout_constraintTop_toTopOf="@+id/today_belated_progressBar"
         appConfig:layout_constraintVertical_bias="0.2" />
 
     <ProgressBar
@@ -49,7 +49,7 @@
         appConfig:layout_constraintTop_toTopOf="parent" />
 
     <ProgressBar
-        android:id="@+id/progressBarReady"
+        android:id="@+id/today_ready_progressBar"
         style="?android:progressBarStyleHorizontal"
         android:layout_width="279dp"
         android:layout_height="261dp"
