--- a/app/src/main/res/layout/content_today_recovery.xml
+++ b/app/src/main/res/layout/content_today_recovery.xml
@@ -1,11 +1,10 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:appConfig="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/today_recovery_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/roboto_bold"
@@ -19,18 +18,18 @@
         appConfig:layout_constraintVertical_bias="0.311" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/today_recovery_imageView"
         android:layout_width="210dp"
         android:layout_height="104dp"
         android:layout_marginTop="32dp"
         android:contentDescription="@string/battery_icon"
         appConfig:layout_constraintLeft_toLeftOf="parent"
         appConfig:layout_constraintRight_toRightOf="parent"
-        appConfig:layout_constraintTop_toTopOf="@+id/textView2"
+        appConfig:layout_constraintTop_toTopOf="@+id/today_recovery_textView"
         appConfig:srcCompat="@drawable/ic_battery" />
 
     <TextView
-        android:id="@+id/textViewCounter"
+        android:id="@+id/today_recovery_textViewCounter"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
@@ -42,7 +41,7 @@
         appConfig:layout_constraintHorizontal_bias="0.501"
         appConfig:layout_constraintLeft_toLeftOf="parent"
         appConfig:layout_constraintRight_toRightOf="parent"
-        appConfig:layout_constraintTop_toBottomOf="@+id/imageView"
+        appConfig:layout_constraintTop_toBottomOf="@+id/today_recovery_imageView"
         appConfig:layout_constraintVertical_bias="0.026" />
 
 </android.support.constraint.ConstraintLayout>
