--- a/app/src/main/res/layout/template_with_menu.xml
+++ b/app/src/main/res/layout/template_with_menu.xml
@@ -6,20 +6,20 @@
     android:fitsSystemWindows="true">
 
     <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
+        android:id="@+id/with_menu_toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />
 
     <FrameLayout
-        android:id="@+id/content_frame"
+        android:id="@+id/with_menu_content_frame"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
     <android.support.design.widget.NavigationView
         app:menu="@menu/drawer_view"
-        android:id="@+id/nav_view"
+        android:id="@+id/with_menu_nav_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
