Minor fixes of view

--- a/app/src/main/res/layout/content_today_belated.xml
+++ b/app/src/main/res/layout/content_today_belated.xml
@@ -1,85 +1,98 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:appConfig="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/today_belated_textView"
+        android:id="@+id/today_belated_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="80dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:textSize="16sp"
-        appConfig:layout_constraintBottom_toBottomOf="@+id/today_belated_progressBar"
+        android:layout_marginTop="64dp"
+        android:fontFamily="@font/roboto_bold"
+        android:textSize="30sp"
         appConfig:layout_constraintEnd_toEndOf="parent"
-        appConfig:layout_constraintStart_toStartOf="parent" />
-
-    <Button
-        android:id="@+id/today_belated_button"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="92dp"
-        android:text="Continue"
-        appConfig:layout_constraintBottom_toTopOf="@+id/today_belated_textView"
-        appConfig:layout_constraintEnd_toEndOf="@+id/today_belated_progressBar"
-        appConfig:layout_constraintHorizontal_bias="0.497"
-        appConfig:layout_constraintStart_toStartOf="@+id/today_belated_progressBar"
-        appConfig:layout_constraintTop_toTopOf="@+id/today_belated_progressBar"
-        appConfig:layout_constraintVertical_bias="0.2" />
+        appConfig:layout_constraintStart_toStartOf="parent"
+        appConfig:layout_constraintTop_toTopOf="parent" />
 
     <ProgressBar
+        android:id="@+id/progressBar"
         style="?android:progressBarStyleHorizontal"
-        android:layout_width="279dp"
-        android:layout_height="261dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:indeterminate="false"
         android:max="100"
         android:progress="100"
         android:progressDrawable="@drawable/circle_full"
         appConfig:layout_constraintBottom_toBottomOf="parent"
         appConfig:layout_constraintEnd_toEndOf="parent"
         appConfig:layout_constraintStart_toStartOf="parent"
-        appConfig:layout_constraintTop_toTopOf="parent" />
+        appConfig:layout_constraintTop_toBottomOf="@+id/today_belated_title"
+        appConfig:layout_constraintVertical_bias="0.35" />
 
     <ProgressBar
         android:id="@+id/today_belated_progressBar"
         style="?android:progressBarStyleHorizontal"
-        android:layout_width="279dp"
-        android:layout_height="261dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:indeterminate="false"
         android:max="100"
+        android:progress="0"
         android:progressDrawable="@drawable/circle_red"
         appConfig:layout_constraintBottom_toBottomOf="parent"
         appConfig:layout_constraintEnd_toEndOf="parent"
-        appConfig:layout_constraintHorizontal_bias="0.504"
-        appConfig:layout_constraintLeft_toLeftOf="parent"
-        appConfig:layout_constraintRight_toRightOf="parent"
         appConfig:layout_constraintStart_toStartOf="parent"
-        appConfig:layout_constraintTop_toTopOf="parent"
-        appConfig:layout_constraintVertical_bias="0.538" />
+        appConfig:layout_constraintTop_toBottomOf="@+id/today_belated_title"
+        appConfig:layout_constraintVertical_bias="0.35" />
 
-    <TextView
+    <Button
+        android:id="@+id/today_belated_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:fontFamily="@font/roboto_bold"
-        android:text="Behind schedule!"
+        android:text="@string/continue_"
+        appConfig:layout_constraintBottom_toBottomOf="@+id/today_belated_progressBar"
+        appConfig:layout_constraintEnd_toEndOf="@+id/today_belated_progressBar"
+        appConfig:layout_constraintHorizontal_bias="0.516"
+        appConfig:layout_constraintStart_toStartOf="parent"
+        appConfig:layout_constraintTop_toTopOf="@+id/today_belated_progressBar" />
+
+    <TextView
+        android:id="@+id/today_belated_percent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:fontFamily="@font/roboto"
         android:textSize="18sp"
-        appConfig:layout_constraintBottom_toBottomOf="parent"
-        appConfig:layout_constraintHorizontal_bias="0.501"
-        appConfig:layout_constraintLeft_toLeftOf="parent"
-        appConfig:layout_constraintRight_toRightOf="parent"
-        appConfig:layout_constraintTop_toTopOf="parent"
-        appConfig:layout_constraintVertical_bias="0.401" />
+        appConfig:layout_constraintEnd_toEndOf="parent"
+        appConfig:layout_constraintStart_toStartOf="parent"
+        appConfig:layout_constraintTop_toBottomOf="@+id/today_belated_button" />
+
+    <TextView
+        android:id="@+id/today_belated_warning"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:fontFamily="@font/roboto_bold"
+        android:text="@string/behind_schedule"
+        android:textSize="24sp"
+        appConfig:layout_constraintBottom_toTopOf="@+id/today_belated_button"
+        appConfig:layout_constraintEnd_toEndOf="parent"
+        appConfig:layout_constraintStart_toStartOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
