--- a/app/src/main/res/layout/activity_upcoming.xml
+++ b/app/src/main/res/layout/activity_upcoming.xml
@@ -99,6 +99,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
+        app:layout_constraintVertical_bias="0.304" />
 
 </android.support.constraint.ConstraintLayout>
