--- a/app/src/main/res/layout/activity_countdown.xml
+++ b/app/src/main/res/layout/activity_countdown.xml
@@ -15,6 +15,7 @@
         android:layout_marginStart="8dp"
         android:fontFamily="@font/roboto_bold"
         android:text="Get Ready!"
+        android:textColor="#000"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="@+id/countdown_label"
         app:layout_constraintEnd_toEndOf="parent"
@@ -27,6 +28,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/roboto_bold"
         android:text="3"
+        android:textColor="#000"
         android:textSize="100dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -45,6 +47,7 @@
         android:layout_marginTop="8dp"
         android:fontFamily="@font/roboto_bold"
         android:text="Go!"
+        android:textColor="#000"
         android:textSize="100dp"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
